--- a/Auth-Service/package.json
+++ b/Auth-Service/package.json
@@ -22,6 +22,7 @@
     "epxress": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "resend": "^4.3.0"
   }
 }
